# Research-and-Rescue-Robot-based-on-Pioneer3-DX

pro/devel/: .catkin  .rosinstall  local_setup.sh
pro/devel/include/common_msgs/: objG.h  objLocation.h  single.h
pro/devel/include/find_object_2d/: DetectionInfo.h  ObjectsStamped.h
pro/devel/include/rosaria/: BumperState.h
pro/devel/lib/darknet_ros/: darknet_ros
pro/devel/lib/explore_lite/: explore
pro/devel/lib/find_object_2d/: find_object_2d  print_objects_detected  tf_example
pro/devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
pro/devel/lib/kinect2_bridge/: kinect2_bridge
pro/devel/lib/kinect2_calibration/: kinect2_calibration
pro/devel/lib/kinect2_viewer/: kinect2_viewer
pro/devel/lib/laser_proc/: laser_proc
pro/devel/lib/map_server/: map_saver  map_server  rtest
pro/devel/lib/multirobot_map_merge/: map_merge
pro/devel/lib/p3dx_navigation/: sendPose
pro/devel/lib/pkgconfig/: amcl.pc  cob_3d_mapping_msgs.pc  cob_cam3d_throttle.pc  cob_object_detection_msgs.pc  cob_perception_msgs.pc  cob_vision_utils.pc  common_msgs.pc  darknet_ros.pc  darknet_ros_msgs.pc  depth_yolo.pc  explore_lite.pc  fake_localization.pc  find_object_2d.pc  get_obj_dist.pc  gmapping.pc  human_detection.pc  ipa_3d_fov_visualization.pc  kinect2_bridge.pc  kinect2_calibration.pc  kinect2_registration.pc  kinect2_viewer.pc  laser_proc.pc  libnite2.pc  map_server.pc  multirobot_map_merge.pc  project.pc  (+13 more)
pro/src/common_msgs/: CMakeLists.txt
pro/src/common_msgs/msg/: objG.msg  objLocation.msg  single.msg
pro/src/my_navigation_pkg/: CMakeLists.txt  package.xml
(+98 files in other folders)
